--- a/index.html
+++ b/index.html
@@ -6,7 +6,32 @@
 </head>
 <link rel="stylesheet" href="style.css">
 <body>
-    
+    <!DOCTYPE html> <meta charset="utf-8" />
+<link rel="stylesheet" type="text/css" href="style.css" />
+
+<div class="row">
+  <div class="column">
+    <table>
+      <tr>
+        <td>Type:</td>
+        <td>Guide:</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td><select id="dropdown_type" onchange="changeType()"></select></td>
+        <td><select id="dropdown_guide" onchange="changeGuide()"></select></td>
+        <td><a id="link" href="#" target="_blank">Link</a></td>
+      </tr>
+    </table>
+
+    <div id="info"></div>
+  </div>
+  <div class="column"><svg width="800" height="600"></svg></div>
+</div>
+
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="graph.js"></script>
+
 <script src="script.js"></script>    
 </body>
 </html>
